// Generate by wctl plugin(toproto). DO NOT EDIT.
syntax = "proto3";
package wpb;
option go_package = "github.com/aggronmagi/walle/testpkg/wpb";

// test message
message TestMsg {
  // int value
  int32 V1 = 1;
  // string value
  string V2 = 2;
}
// multiply rq
message MulRq {
  // mul a
  int32 A = 1;
  // mul b
  int32 B = 2;
}
// multiply result
message MulRs {
  // mul result
  int32 R = 1;
}
// add request
message AddRq {
  // add params
  repeated int64 Params = 1;
}
// add reply
message AddRs {
  // add result
  int64 Value = 1;
}
message ANtf {
  map<int32,int32> F1 = 1;
}
message BNtf {
  ANtf F1 = 1;
  repeated ANtf F2 = 2;
}
